Correção experiência profissional

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>
           Atualmente trabalho em projetos pessoais buscando aplicar meus
           conhecimentos e adquirir uma experiência de uso dos meus codigos de
-          uma modo que esteja mais perto de um dia a dia real. Meu foco é
+          modo que esteja mais perto de um dia a dia real. Meu foco é
           trabalhar no desenvolvimento backend de aplicações web, mas estou
           aberto a aprender aquilo que for preciso para me destacar no mercado.
         </p>
